# notarcteryx

./: .env.example  .gitignore  next.config.js  package-lock.json  package.json  wrangler.toml
.open-next/.build/durable-objects/: queue.js
.open-next/assets/: BUILD_ID
.open-next/cache/yOKmxsIdTlVgHWvNG5vob/: _global-error.cache  _not-found.cache  cart.cache  index.cache
.open-next/cloudflare/: cache-assets-manifest.sql  images.js  init.js
.open-next/dynamodb-provider/: dynamodb-cache.json
.open-next/middleware/: handler.mjs
.open-next/server-functions/default/: handler.mjs  handler.mjs.meta.json  index.mjs
backend/: pyproject.toml  render.yaml  requirements.txt
backend/app/: config.py  main.py
backend/app/api/: pricing.py  products.py  quiz.py  router.py
backend/app/data/: mountains.json
backend/app/models/: domain.py  schemas.py
backend/app/services/: bayesian_scorer.py  mountain_db.py  pricing_service.py  quiz_service.py
backend/scripts/: seed_mountains.py
backend/tests/: conftest.py  test_bayesian_scorer.py  test_mountain_db.py  test_quiz_api.py
keep-alive/: worker.js  wrangler.toml
src/app/: globals.css  layout.tsx  page.tsx
src/app/cart/: Cart.module.css  Cart.tsx  page.tsx
src/components/Header/: CartIcon.tsx  Header.module.css  Header.tsx
src/components/MountainQuiz/: MountainQuiz.module.css  MountainQuiz.tsx
src/components/ProductDescription/: DescriptionSection.module.css  DescriptionSection.tsx  FeatureIcons.module.css  FeatureIcons.tsx
src/data/: product.ts
src/hooks/: useCart.ts  usePrice.ts  useQuiz.ts
(+20 files in other folders)
